design: Give topic bars the proper background color in night mode.
Use color `hsl(212, 28%, 18%)`, which is the same color used by various
other night-mode elements. (Opacity is also already added by the
`message-fade` class.)

Fix #8823.

--- a/static/styles/night_mode.css
+++ b/static/styles/night_mode.css
@@ -19,6 +19,10 @@ body.night-mode #settings_page .right {
     background-color: hsl(212, 28%, 18%);
 }
 
+body.night-mode .column-middle.column-overlay.recipient-bar-main {
+    background-color: hsl(212, 28%, 18%) !important;
+}
+
 body.night-mode .message_embed .data-container::after {
     background: linear-gradient(0deg, hsl(212, 28%, 18%), transparent 10%);
 }
