--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -10,6 +10,10 @@
 </style>
 {% endblock %}
 
+{% block commonhead %}
+{{ render_bundle('porticocommon') }}
+{% endblock %}
+
 {% block portico_content %}
 
 {% include 'zerver/landing_nav.html' %}
