--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -29,8 +29,7 @@
 </style>
 
 {{ render_bundle('translations', attrs='nonce="%s"' % (csp_nonce)) }}
-{{ minified_js('app', csp_nonce)|safe }}
-{{ render_bundle('app-styles', attrs='nonce="%s"' % (csp_nonce)) }}
+{{ render_bundle('app', attrs='nonce="%s"' % (csp_nonce)) }}
 {{ render_bundle('katex', attrs='nonce="%s"' % (csp_nonce)) }}
 {% include "zerver/app/topic_is_muted.html" %}
 {% endblock %}
