--- a/templates/zerver/config_error.html
+++ b/templates/zerver/config_error.html
@@ -53,7 +53,7 @@
                     {% endif %}
 
                     {% if github_error %}
-                    {{ render_markdown_path('zerver/github-error.md', {"root_domain_uri": root_domain_uri, "settings_path": settings_path, "secrets_path": secrets_path}) }}
+                    {{ render_markdown_path('zerver/github-error.md', {"social_auth_domain_uri": social_auth_domain_uri, "settings_path": settings_path, "secrets_path": secrets_path}) }}
                     {% endif %}
 
                     {% if google_error or github_error %}
