--- a/static/templates/subscription.handlebars
+++ b/static/templates/subscription.handlebars
@@ -16,14 +16,14 @@
         </div>
         <div class="bottom-bar">
             <div class="description" data-no-description="{{t 'No description.'}}">{{{rendered_description}}}</div>
-            {{#if is_old_stream}}
+            {{#if is_new_stream}}
+            <div class="stream-message-count" data-toggle="tooltip" title="{{t 'Stream created recently' }}">
+                <span class="stream-message-count-text">{{t "New" }}</span>
+            </div>
+            {{else}}
             <div class="stream-message-count" data-toggle="tooltip" title="{{t 'Estimated messages per week' }}">
                 <i class="fa fa-bar-chart"></i>
                 <span class="stream-message-count-text">{{stream_weekly_traffic}}</span>
-            </div>
-            {{else}}
-            <div class="stream-message-count" data-toggle="tooltip" title="{{t 'Stream created recently' }}">
-                <span class="stream-message-count-text">{{t "New" }}</span>
             </div>
             {{/if}}
         </div>
